# nfc-eventd

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
conf/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  nfc-eventd  nfc-eventd.c
src/.deps/: nfc-eventd.Po
src/debug/: Makefile  Makefile.in  libdebug.la  nfc-utils.lo
src/debug/.deps/: debug.Plo  nfc-utils.Plo
src/modules/: Makefile  Makefile.am  Makefile.in  nem_execute.la  nem_execute_la-nem_execute.lo  nem_plantain.c  nem_plantain.h
src/modules/.deps/: nem_execute_la-nem_execute.Plo
src/modules/.libs/: nem_execute.lai
src/nfcconf/: Makefile  Makefile.in  libnfcconf.la  nfcconf.lo  nfclex.lo
src/nfcconf/.deps/: nfcconf.Plo  nfclex.Plo  parse.Plo  write.Plo
